--- a/ui/css/rotkelchen.css
+++ b/ui/css/rotkelchen.css
@@ -12,7 +12,7 @@
     height:     100%;
     width:      100%;
     background: rgba( 255, 255, 255, .8 )
-                url('images/loading-circle.gif')
+                url('../images/loading-circle.gif')
                 50% 50%
                 no-repeat;
 }
